# smallbox

./: .gitignore  CMakeLists.txt  G4History.macro  LICENSE  README.md  SB.cc  run.mac  sbVersion.hh.in  scintillator_absorbtion_length.csv  scintillator_rayleigh_scattering_length.csv  smallbox.cc  vis.mac
data/: cosmic_muon_energy_spectrum_CDF_inverse.csv  cosmic_muon_zenith_angle_distribution_CDF_inverse.csv
data/unused/: cosmic_muon_zenith_angle_distribution.csv
datafiles/: cosmicMuonProperties.csv  example.csv  scintillator_properties.csv
include/: CSVHandler.hh  CreateMapFromCSV.hh  SBActionInitialization.hh  SBAnalysisManager.hh  SBConfigs.hh  SBDetectorConstruction.hh  SBEventAction.hh  SBMuonProperty.hh  SBPhysicsList.hh  SBPrimaryGeneratorAction.hh  SBProgressMonitor.hh  SBRunAction.hh  SBScintillatorHit.hh  SBScintillatorSD.hh  SBSiPMHit.hh  SBSiPMSD.hh  sbActionInitialization.hh  sbConfigs.hh  sbDetectorConstruction.hh  sbEventAction.hh  sbFunctionSwitch.hh  sbGlobal.hh  sbInterpolatingFunction.hh  sbOptics.hh  sbPhysicsList.hh  sbPrimaryGeneratorAction.hh  sbRunAction.hh  sbScintillator.hh  sbScintillatorHit.hh  sbScintillatorSD.hh  sbSettings.hh  sbSiPMHit.hh  sbSiPMSD.hh  sbSteppingAction.hh  sbSwitch.hh  sbTrackerHit.hh  sbTrackerSD.hh  sbVersion.hh  sbXYlist.hh
macros/: init_vis.mac  run.mac  vis.mac
obsolete/datafiles/: scintillator_fast_light_component.csv  scintillator_reemission_probablity.csv  scintillator_refraction_index.csv
obsolete/include/: sbInterpolatingFunction.hh
obsolete/src/: sbInterpolatingFunction.cc
src/: SBActionInitialization.cc  SBAnalysisManager.cc  SBDetectorConstruction.cc  SBEventAction.cc  SBMuonProperty.cc  SBPhysicsList.cc  SBPrimaryGeneratorAction.cc  SBProgressMonitor.cc  SBRunAction.cc  SBScintillatorHit.cc  SBScintillatorSD.cc  SBSiPMHit.cc  SBSiPMSD.cc  sbActionInitialization.cc  sbDetectorConstruction.cc  sbEventAction.cc  sbInterpolatingFunction.cc  sbPhysicsList.cc  sbPrimaryGeneratorAction.cc  sbRunAction.cc  sbScintillatorHit.cc  sbScintillatorSD.cc  sbSiPMHit.cc  sbSiPMSD.cc  sbSteppingAction.cc  sbTrackerHit.cc  sbTrackerSD.cc  sbXYlist.cc
